<resources>
    <string name="app_name">COMP3025_200535561_DainShin_Calculator2</string>
    <string name="divide">\uf529</string>
    <string name="plus">\u002b</string>
    <string name="minus">\uf068</string>
    <string name="plus_minus">\ue43c</string>
    <string name="multiply">\uf00d</string>
    <string name="delete">\uf060</string>
    <string name="percent">\u0025</string>
    <string name="equals">\u003d</string>
</resources>